[gd_scene load_steps=6 format=2]

[ext_resource path="res://Born2bSportyV2.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Other_screens/Title.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 41
extra_spacing_char = 10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 42
extra_spacing_char = 5
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 60
extra_spacing_space = 6
font_data = ExtResource( 1 )

[node name="Title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.048
margin_right = -2.0
margin_bottom = -34.8
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.064
margin_left = -6.0
margin_top = 6.0
margin_right = 5.0
margin_bottom = -34.016
color = Color( 0.423529, 0.337255, 0.729412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 0.207843, 0.415686, 0.913725, 0.752941 )
margin_left = 34.8882
margin_top = 101.825
margin_right = 968.888
margin_bottom = 258.825
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="."]
self_modulate = Color( 0.207843, 0.415686, 0.913725, 0.752941 )
margin_left = 33.0
margin_top = 178.0
margin_right = 969.0
margin_bottom = 524.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="."]
margin_left = 325.612
margin_top = 293.864
margin_right = 650.612
margin_bottom = 353.864
custom_fonts/font = SubResource( 1 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="."]
margin_left = 320.655
margin_top = 412.724
margin_right = 645.655
margin_bottom = 472.724
custom_fonts/font = SubResource( 2 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" type="RichTextLabel" parent="."]
margin_left = 150.0
margin_top = 170.0
margin_right = 892.0
margin_bottom = 304.0
custom_fonts/normal_font = SubResource( 3 )
text = "Hello! Welcome To Laser-Shoot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_Options_pressed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
